feat: enhance code navigator with composite project support
✨ New Features:
- Composite project navigation: c dipws = c dipw + dips
- Support for both orders: c dipws and c dipsw work identically
- Concatenated suffix parsing for web (w) and server (s) components
- Updated help text with shorthand syntax examples

🔧 Technical Implementation:
- Added parse_composite_projects() method to CodeNavigator
- Enhanced project spec parsing to handle multi-character suffixes
- Validates project components exist before opening
- Works with both shortcuts (dip) and full names (dispatch20)
- Maintains full backwards compatibility

📚 Usage Examples:
- c dipws    # Opens dispatch20 web + server components
- c dipsw    # Same as above, different order
- c otvws    # Opens otv20 web + server components
- c urmwww   # Opens urm20 web component 3 times (duplicates allowed)

🎯 Benefits:
- More intuitive multi-component navigation
- Reduces keystrokes for common workflows
- Natural concatenation matches user mental model
- Robust error handling for invalid combinations

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 local.ali.sh
 mappings.local.sh
 *local.sh
+mappings.json
 
 # Editor files
 *~
@@ -12,3 +13,95 @@ mappings.local.sh
 
 # Temporary files
 *.tmp
+
+##############################################################################
+# C++ Build Artifacts
+##############################################################################
+
+# Build directories
+build/
+build-*/
+cmake-build-*/
+
+# Compiled binaries (allow build/aliases-cli for distribution)
+# aliases-cli  # Commented out to allow committing the built binary
+*.exe
+*.out
+*.app
+
+# Object files
+*.o
+*.obj
+*.lo
+*.slo
+*.ko
+
+# Libraries
+*.a
+*.la
+*.lib
+*.so
+*.so.*
+*.dylib
+*.dll
+
+# CMake
+CMakeCache.txt
+CMakeFiles/
+CMakeScripts/
+cmake_install.cmake
+compile_commands.json
+CTestTestfile.cmake
+Testing/
+_deps/
+
+# Make
+Makefile.in
+.deps/
+.dirstamp
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+# Profiling
+*.prof
+gmon.out
+
+# Static analysis
+cppcheck-report.xml
+*.cppcheck
+
+# Clang
+.clang_complete
+.clangd/
+
+# GCC
+*.gch
+*.pch
+
+# Intel C++ Compiler
+*.iobj
+*.ipdb
+
+# Coverage
+*.gcda
+*.gcno
+*.gcov
+lcov.info
+coverage/
+
+# Valgrind
+*.memcheck
+*.callgrind
+*.cachegrind
+
+# Conan
+conandata.txt
+conanfile.py.user
+conan.lock
+
+# vcpkg
+vcpkg_installed/
