--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,9 @@ name: Release (Tag-triggered)
 # This workflow is triggered when a tag is pushed manually
 # For automatic releases, see ci-cd.yml
 
+permissions:
+  contents: write
+
 on:
   push:
     tags:
@@ -14,7 +17,7 @@ jobs:
     
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       
       - name: Install dependencies
         run: |
