feat: add multiple workspace directories and ignore patterns support
- Add workspace_directories array to support scanning projects from multiple sources
- Add projects.ignore array to exclude directories when scanning workspaces
- Implement automatic migration from workspace_directory to workspace_directories
- Update project discovery to scan all configured workspace directories
- Add ignore pattern filtering to FileUtils::discover_workspace_projects
- Update install script with migration logic for both features
- Update documentation with examples for multiple sources and ignore patterns
- Maintain backward compatibility with old workspace_directory format

--- a/config.template.json
+++ b/config.template.json
@@ -33,10 +33,11 @@
     "last_todo_sync": 0
   },
   "projects": {
-    "workspace_directory": "~/workspaces",
+    "workspace_directories": ["~/workspaces"],
     "shortcuts": {},
     "server_paths": {},
     "web_paths": {},
+    "ignore": [],
     "default_paths": {
       "server": ["java/serverJava", "serverJava", "backend", "server"],
       "web": ["webapp", "webApp", "web", "frontend", "client"]
